@@ -57,21 +57,21 @@ plugins_dir_cmd=""
 plugins_cmd=""
 keyring_cmd=""
 
-# if [ -e "${BASEDIR}/lib/mysql/plugin/keyring_file.so" ]; then
-#      encryption_plugins="${BASEDIR}/lib/mysql/plugin/keyring_file.so"
-# fi
-# 
-# if [ ! -z "$encryption_plugins" ]; then
-#     plugins_cmd="--early-plugin-load=${encryption_plugins}"
-#     keyring_cmd="--keyring_file_data=/tmp/PORT/data/keyring"
-#     plugins_dir_cmd="--plugin-dir=${BASEDIR}/lib/mysql/plugin/"
-# fi
+if [ -e "${BASEDIR}/lib/mysql/plugin/keyring_file.so" ]; then
+     encryption_plugins="${BASEDIR}/lib/mysql/plugin/keyring_file.so"
+fi
 
-init_file="/tmp/12345/mysql-init"
+if [ ! -z "$encryption_plugins" ]; then
+    plugins_cmd="--early-plugin-load=${encryption_plugins}"
+    keyring_cmd="--keyring_file_data=/tmp/PORT/data/keyring"
+    plugins_dir_cmd="--plugin-dir=${BASEDIR}/lib/mysql/plugin/"
+fi
+
+init_file="/tmp/PORT/mysql-init"
 if [ -e $init_file ]; then
-    $BASEDIR/bin/mysqld --defaults-file=/tmp/12345/my.sandbox.cnf -u root --init-file $init_file $plugins_cmd $plugins_dir_cmd $keyring_cmd &
+    $BASEDIR/bin/mysqld --defaults-file=/tmp/PORT/my.sandbox.cnf -u root --init-file $init_file $plugins_cmd $plugins_dir_cmd $keyring_cmd &
 else
-    $BASEDIR/bin/mysqld --defaults-file=/tmp/12345/my.sandbox.cnf --keyring_file_data=/tmp/12345/data/keyring $plugins_cmd $plugins_dir_cmd $keyring_cmd > /dev/null 2>&1 &
+    $BASEDIR/bin/mysqld --defaults-file=/tmp/PORT/my.sandbox.cnf $plugins_cmd $plugins_dir_cmd $keyring_cmd > /dev/null 2>&1 &
 fi
 cd $PWD
 
