@@ -2,6 +2,7 @@ Changelog for Percona Toolkit
 
 v3.0.9 
 
+ * Feature     PT-1530 : Add support for encryption status to mysql-summary
  * Feature     PT-1526 : Add ndb status to pt-mysql-summary (Thanks Fernando Ipar)
  * Feature     PT-1525 : Added support for MySQL 8 roles into pt-mysql-summary
  * Feature     PT-1509 : Only set binlog_format when necessary (Thanks Moritz Lenz)
